fix grid items overflowing out of the grid

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -28,6 +28,8 @@ body {
 }
 
 .value {
+    position: relative;
+    right:3.4rem;
     border: none;
     outline: none;
     background: #f28c28;
@@ -40,7 +42,7 @@ body {
 
 .buttons {
     position: relative;
-    right: 1rem;
+    right: 3.4rem;
     cursor: pointer;
     display: grid;
     gap: 1rem;
@@ -80,6 +82,6 @@ body {
 .equal {
     background: #FEA358;
     grid-row: span 2;
-    height: 110px
+    height: 125px
 }
 
